[gd_scene load_steps=2 format=3 uid="uid://dubtt60bnpltl"]

[ext_resource type="Script" uid="uid://btmpiwo6g0u0m" path="res://loadout_menu.gd" id="1_dmc12"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_dmc12")

[node name="LeftButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_bottom = 0.029
offset_left = 1297.0
offset_top = 700.0
offset_right = 1320.0
offset_bottom = 699.68
scale = Vector2(2, 2)
text = ">"

[node name="RightButton" type="Button" parent="."]
layout_mode = 0
offset_left = 359.0
offset_top = 700.0
offset_right = 382.0
offset_bottom = 731.0
scale = Vector2(2, 2)
text = "<"

[node name="Confirm" type="Button" parent="."]
layout_mode = 0
offset_left = 835.0
offset_top = 610.0
offset_right = 906.0
offset_bottom = 641.0
text = "Confirm"

[node name="MSlot1" type="OptionButton" parent="."]
layout_mode = 0
offset_left = 400.0
offset_top = 200.0
offset_right = 432.0
offset_bottom = 220.0

[node name="MSlot2" type="OptionButton" parent="."]
layout_mode = 0
offset_left = 900.0
offset_top = 200.0
offset_right = 932.0
offset_bottom = 220.0

[node name="MSlot3" type="OptionButton" parent="."]
layout_mode = 0
offset_left = 400.0
offset_top = 275.0
offset_right = 432.0
offset_bottom = 295.0

[node name="MSlot4" type="OptionButton" parent="."]
layout_mode = 0
offset_left = 900.0
offset_top = 275.0
offset_right = 932.0
offset_bottom = 295.0

[node name="MSlot5" type="OptionButton" parent="."]
layout_mode = 0
offset_left = 400.0
offset_top = 350.0
offset_right = 432.0
offset_bottom = 370.0

[node name="MSlot6" type="OptionButton" parent="."]
layout_mode = 0
offset_left = 900.0
offset_top = 350.0
offset_right = 932.0
offset_bottom = 370.0

[node name="MSlot7" type="OptionButton" parent="."]
layout_mode = 0
offset_left = 400.0
offset_top = 425.0
offset_right = 432.0
offset_bottom = 445.0

[node name="MSlot8" type="OptionButton" parent="."]
layout_mode = 0
offset_left = 900.0
offset_top = 425.0
offset_right = 932.0
offset_bottom = 445.0

[node name="DescriptionLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 421.0
offset_top = 669.0
offset_right = 631.0
offset_bottom = 692.0
text = "Current Missile Description"
